--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Rides#show</h1>
-<p>Find me in app/views/rides/show.html.erb</p>
+
+<h2>Date:<%= @trip.date %></h2>
+
+<h2>Rating:<%= @trip.rating %></h2>
+
+<h2> Cost:<%= @trip.cost %></p>
+<ul>
+   <li>
+     <%= link_to "Edit", edit_trip_path %>
+   </li>
+   <li>
+     <%= link_to "Delete", trip_path(@trip.id), method: :delete%>
+   </li>
+ </u
