--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><%= link_to "Home", trips_path %>
+        </li>
+        <li><%= link_to "Drivers", drivers_path %>
+        </li>
+        <li><%= link_to "Passengers", passengers_path %>
+        </li>
+        <li><%= link_to "Add a Driver" , new_driver_path %>
+        </li>
+        <li><%= link_to "Add a Passenger" , new_passenger_path %>
+        </li>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
