--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>RideshareRails</li>
+          <li><%= link_to "Drivers", drivers_path %></li>
+          <li><%= link_to "Passengers", passengers_path %></li>
+        </ul>
+      </nav>
+    </header>
     <%= yield %>
 
   </body>
