--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,2 +1,15 @@
 <h1>Drivers#index</h1>
-<p>Find me in app/views/drivers/index.html.erb</p>
+<ul>
+  <% @drivers.each do |driver| %>
+  <li class="drivers">
+    <span>
+      <%= link_to driver.name, driver_path(driver.id), class: 'name-link' %>
+    </span>
+  </li>
+  <li class="drivers">
+    <span>
+      <%= link_to driver.vin, driver_path(driver.id), class: 'vin-link' %>
+    </span>
+  </li>
+  <% end %>
+</ul>
