added passenger show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
           <li>RideshareRails</li>
           <li><%= link_to "Drivers", drivers_path %></li>
           <li><%= link_to "Passengers", passengers_path %></li>
+          <li><%= link_to "Add a Driver", new_driver_path %>
+          <li><%= link_to "Add a passenger", new_passenger_path %>
+
         </ul>
       </nav>
     </header>
