--- a/app/views/passengers/new.html.erb
+++ b/app/views/passengers/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Passengers#new</h1>
-<p>Find me in app/views/passengers/new.html.erb</p>
+
+<%= render partial: "form" ,locals: {page_title: "Add New Passenger"}%>
