updated form view

--- a/app/views/passengers/_form.html.erb
+++ b/app/views/passengers/_form.html.erb
@@ -12,7 +12,7 @@
 <%= form_for @passenger do |f| %>
 <%= f.label :name%>
 <%= f.text_field :name %>
-%= f.label :phone_num %>
+<%= f.label :phone_num %>
 <%= f.text_area :phone_num%>
 
 <%= f.submit %>
