--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -2,12 +2,22 @@
 
 <img src="http://placebeyonce.com/250-150" alt="Driver profile picture">
 
+<% total_ratings = 0%>
+<% number_of_trips = 0%>
+<% total_earnings = 0%>
+
+<% @driver.trips.all.each do |trip| %>
+  <% total_ratings += trip.rating %>
+  <% number_of_trips += 1 %>
+  <% total_earnings += trip.cost %>
+<% end %>
+
 <p>
-  <%= "Average Rating: #{}"%>
+  <%= "Average Rating: #{(number_of_trips == 0 ? 0 : total_ratings/number_of_trips)}"%>
 </p>
 
 <p>
-  <%= "Total Earnings: #{}"%>
+  <%= "Total Earnings: $#{(total_earnings/100)}"%>
 </p>
 
 <h2>Driver Trips</h2>
@@ -28,7 +38,7 @@
         <td><%= trip.passenger_id %></td>
         <td><%= trip.date %></td>
         <td><%= trip.rating %></td>
-        <td><%=trip.cost%></td>
+        <td><%="$#{(trip.cost/100)}"%></td>
         <td><%= link_to "Edit", edit_driver_path %></td>
         <td><%= link_to "Delete", trip_path(@driver.id), method: :delete %></td>
       </tr>
