Changed driver calculations from view to model

--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -3,11 +3,11 @@
 <img src="http://placebeyonce.com/250-150" alt="Driver profile picture">
 
 <p>
-  <%= "Average Rating: #{Driver.driver_rating}"%>
+  <%= "Average Rating: #{@driver.driver_rating}"%>
 </p>
 
 <p>
-  <%= "Total Earnings: $#{Driver.driver_earnings}"%>
+  <%= "Total Earnings: $#{@driver.driver_earnings}"%>
 </p>
 
 <h2>Driver Trips</h2>
