partials for edit view

--- a/app/views/passengers/edit.html.erb
+++ b/app/views/passengers/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "form" ,locals: {page_title: "Edit a Trip"}%>
+<%= render partial: "form" ,locals: {button_name: "Edit Passenger"}%>
