--- a/app/views/passengers/index.html.erb
+++ b/app/views/passengers/index.html.erb
@@ -1,8 +1,8 @@
 
-
+<h1> All Passengers List </h1>
 <ul>
   <% @passengers.each do |passenger| %>
-  
+
   <li class="passengers">
     <span>
       <%= link_to passenger.name, passenger_path(passenger.id), class: 'name-link' %>
