--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
           <li><%= link_to "Passengers", passengers_path %></li>
           <li><%= link_to "Add a Driver", new_driver_path %>
           <li><%= link_to "Add a passenger", new_passenger_path %>
+          <li><%= link_to "All Trips", trips_path %>
 
         </ul>
       </nav>
