still need to fix the show page for new trip

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,10 +1,23 @@
-<h1>Rides</h1>
-<ul>
+<h1>All Trips</h1>
+
+
+<table>
+  <tr>
+    <th>Trip ID</th>
+    <th>Trip Date</th>
+    <th>Passenger ID</th>
+    <th>Driver ID</th>
+    <th>Trip Rating</th>
+    <th>Trip Cost</th>
+  </tr>
   <% @trips.each do |trip| %>
-  <li class="trips">
-    <span>
-      <%= link_to trip.date, trip_path(trip.id), class: 'date-link' %>
-    </span>
-  </li>
-  <% end %>
-</ul>
+  <tr>
+    <td><%= trip.id %></td>
+    <td><%= link_to trip.date, trip_path(trip.id) %></td>
+    <td><%= trip.passenger_id %></td>
+    <td><%= trip.driver_id %></td>
+    <td><%= trip.rating %></td>
+    <td>$<%='%.02f' % (trip.cost / 100)%></td>
+  </tr>
+    <% end %>
+</table>
