--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,2 +1,1 @@
-<h1>Rides#edit</h1>
-<p>Find me in app/views/rides/edit.html.erb</p>
+<%= render partial: "form" ,locals: {button_name: "Edit trip"}%>
