--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -10,6 +10,8 @@
   <%= "Total Earnings: $#{@driver.driver_earnings}"%>
 </p>
 
+<p><%= link_to "Delte Driver", driver_path(@driver.id), method: :delete %> </p>
+
 <h2>Driver Trips</h2>
 <table>
   <tr>
@@ -29,8 +31,8 @@
         <td><%= trip.date %></td>
         <td><%= trip.rating %></td>
         <td><%="$#{(trip.cost/100)}"%></td>
-        <td><%= link_to "Edit", edit_driver_path %></td>
-        <td><%= link_to "Delete", trip_path(@driver.id), method: :delete %></td>
+        <td><%= link_to "Edit Trip", edit_trip_path %></td>
+        <td><%= link_to "Delete Trip", trip_path(trip.id), method: :delete %></td>
       </tr>
     <% end %>
 </table>
