--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -10,7 +10,7 @@
   <%= "Total Earnings: $#{@driver.driver_earnings}"%>
 </p>
 
-<p><%= link_to "Delte Driver", driver_path(@driver.id), method: :delete %> </p>
+<p><%= link_to "Delete Driver", driver_path(@driver.id), method: :delete %> </p>
 
 <h2>Driver Trips</h2>
 <table>
