fixed request trip to save new trip data

--- a/app/views/passengers/show.html.erb
+++ b/app/views/passengers/show.html.erb
@@ -34,8 +34,7 @@
 
 
 <ul>
-   <li>
-     <%= link_to "Request ride", passenger_trips_path(params[:id]),  method: :post %></li>
+   <li><%= link_to "Request ride", passenger_trips_path(params[:id]),  method: :post %></li>
      <li><%= link_to "Edit", edit_passenger_path %></li>
 
 
