--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -25,7 +25,7 @@
   <%= f. text_field :cost %>
 
   <%= f.label :rating %>
-  <%= f. text_field :rating %>
+  <%= f.text_area :rating %>
 
   <%= f.submit %>
 <% end %>
