passengers can rate trips

--- a/app/views/passengers/show.html.erb
+++ b/app/views/passengers/show.html.erb
@@ -21,7 +21,16 @@
     <td><%=trip.driver_id%></td>
     <td><%= trip.passenger_id %></td>
     <td><%= trip.date %></td>
-    <td><%= trip.rating %></td>
+    <td>
+      <% if trip.rating == nil || trip.rating == 0 %>
+        <%= form_for trip do |f|%>
+        <%= f.number_field :rating, min: 1, max: 5%>
+        <%= f.submit %>
+        <% end %>
+      <% else %>
+        <%= trip.rating %>
+      <% end %>
+    </td>
     <td><%=trip.cost%></td>
     <td><%= link_to "Edit" , edit_passenger_path(@passenger.id)%></td>
     <td><%= link_to "Delete", trip_path(trip.id),method: :delete %></td>
