--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -19,6 +19,6 @@
     <td> <%= @trip.passenger.name %></td>
     <td><%= Date.today%></td>
     <td><%= @trip.rating %></td>
-    <td><%= Driver.cost %></td>
+    <td><%= @trip.cost %></td>
   </tr>
   </table>
