added hidden fields to the form view

--- a/app/views/passengers/_form.html.erb
+++ b/app/views/passengers/_form.html.erb
@@ -1,24 +1,9 @@
-
-<% if @passenger.errors.any? %>
-<ul class= "errors">
-  <% @passenger.errors.each do |field,message| %>
-  <li>
-    <strong><%= field.capitalize %>: </strong><%= message %>
-  </li>
-  <% end %>
-</ul>
-<%end%>
-
 <%= form_for @passenger do |f| %>
-<%= f.label :name%>
-<br>
-<%= f.text_field :name %>
-<br>
-<%= f.label :phone_num %>
-<br>
-<%= f.text_area :phone_num%>
-<br>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
 
-<%= f.submit %>
+  <%= f.label :phone_number %>
+  <%= f.text_field :phone_num %>
 
+  <%= f.submit  %>
 <% end %>
