--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,19 +1,85 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
- table, td, th {
+body {
+  margin: 0;
+  /* background-image: url('car.jpg'); */
+  /*text-align:center;*/
+}
+
+/**********HEADER*******/
+
+header {
+
+  background-size: 50%;
+
+  background-color: lightblue;
+  font-family: fantasy;
+  color: #87093b;
+  font-weight: bold;
+  margin: 0;
+  padding: 1%;
+
+}
+
+h1 {
+  text-align: center;
+  /*margin-top: -10px;*/
+}
+
+h1 img{
+  width: 50px;
+  height: auto;
+}
+
+h1 a{
+  text-decoration: none;
+}
+
+h2 {
+  text-align: center;
+}
+
+.header_link a{
+  display: inline-block;
+  background-color: #87021b;
+  color: white;
+  padding: 15px 32px;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  text-decoration: none;
+  border-radius: 2em;
+  box-shadow: 4px 3px 5px gray;
+  margin-right: 6%;
+  margin-left: 5%;
+}
+
+.header_link a:hover {
+  background-color: white;
+  color: #87021b;
+  box-shadow: 4px 5px 9px gray;
+}
+
+main {
+  /*background-color: white;*/
+  opacity: .8;
+  clear:both;
+  padding: 50px;
+}
+
+main th {
+  padding: 50px;
+  padding-bottom: 10px;
+}
+
+main td {
+  padding: 20px;
+  padding-top: 5px;
+  text-align: center;
+}
+
+main .edit_trip {
+  text-align: center;
+}
+table, td, th {
     border: 1px solid black;
 }
 table {
@@ -25,24 +91,22 @@ td {
 }
 th {
     height: 50px;
+  }
+button{
+  background-color: green;
 }
-nav {
-  background-color: rgba(215, 190, 217, 0.64);
-  height: 100px;
-  color: rgb(81, 18, 84);
-}
-/* Passenger and Driver index page styles */
-ul {
-  width: 40em;
-}
-li {
-  float: left;
-  width: 13em;
-}
-a {
-  text-decoration: none;
-}
-
-h2{
+footer div{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color:lightblue;
   text-align: center;
+  /*position: absolute;
+  left:0px;
+  bottom:100px;
+  height:30px;
+  width:100%;*/
+  clear: both;
+  padding-top: 50px;
 }
