still need to work on styling

--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,1 +1,16 @@
-<%= render partial: "form" ,locals: {page_title: "Add New Driver"}%>
+<h2>Add New Driver</h2>
+
+<% if @driver.errors.messages.length > 0 %>
+<section class="error_messages">
+  <ul>
+    <% @driver.errors.messages.each do |field, problems| %>
+      <li>
+        <strong><%= field %></strong>
+        <%= problems %>
+      </li>
+      <% end%>
+  </ul>
+</section>
+<% end %>
+
+<%= render partial: "form"%>
