--- a/app/views/passengers/index.html.erb
+++ b/app/views/passengers/index.html.erb
@@ -1,13 +1,22 @@
+<h2>Passengers</h2>
 
-<h1> All Passengers List </h1>
-<ul>
-  <% @passengers.each do |passenger| %>
+<%=button_to "Add New Passenger", new_passenger_path, method: :get%>
 
-  <li class="passengers">
-    <span>
-      <%= link_to passenger.name, passenger_path(passenger.id), class: 'name-link' %>
-    </span>
-  </li>
-
-  <% end %>
-</ul>
+<table>
+  <tr>
+    <th>
+      Passenger ID
+    </th>
+    <th>Passenger</th>
+  </tr>
+<% @passengers.each do |passenger| %>
+  <tr>
+    <td>
+      <%= passenger.id %>
+    </td>
+    <td>
+    <%= link_to(passenger.name, passenger_path(passenger.id)) %>
+    </td>
+  </tr>
+<% end %>
+</table>
