--- a/app/views/passengers/new.html.erb
+++ b/app/views/passengers/new.html.erb
@@ -1,2 +1,16 @@
+<h2>We have a new passenger!!!</h2>
 
-<%= render partial: "form" ,locals: {page_title: "Add New Passenger"}%>
+<% if @passenger.errors.messages.length > 0 %>
+<section class="error_messages">
+  <ul>
+    <% @passenger.errors.messages.each do |field, problems| %>
+      <li>
+        <strong><%= field %></strong>
+        <%= problems %>
+      </li>
+      <% end%>
+  </ul>
+</section>
+<% end %>
+
+<%= render partial: "form"%>
