--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,23 +1,8 @@
-<h1>All Trips</h1>
+<h2>All TRIPS!!!</h2>
 
+<% @trips.each do |trip| %>
+  <p>
+    <%= trip.id %>
+  </p>
 
-<table>
-  <tr>
-    <th>Trip ID</th>
-    <th>Trip Date</th>
-    <th>Passenger ID</th>
-    <th>Driver ID</th>
-    <th>Trip Rating</th>
-    <th>Trip Cost</th>
-  </tr>
-  <% @trips.each do |trip| %>
-  <tr>
-    <td><%= trip.id %></td>
-    <td><%= link_to trip.date, trip_path(trip.id) %></td>
-    <td><%= trip.passenger_id %></td>
-    <td><%= trip.driver_id %></td>
-    <td><%= trip.rating %></td>
-    <td>$<%='%.02f' % (trip.cost / 100)%></td>
-  </tr>
-    <% end %>
-</table>
+<% end %>
