--- a/app/assets/stylesheets/main_controller.scss
+++ b/app/assets/stylesheets/main_controller.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the Rides controller here.
+// Place all the styles related to the main_controller controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-body th {
-  padding: 20px;
-}
