--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,10 +1,11 @@
-<h1>Drivers</h1>
-<ul>
+<h2>Drivers</h2>
+
+<ol>
   <% @drivers.each do |driver| %>
-  <li class="drivers">
-    <span>
-      <%= link_to driver.name, driver_path(driver.id), class: 'name-link' %>
-    </span>
-  </li>
+    <div class="driver">
+        <strong>
+          <li><%= link_to driver.name, driver_path(driver.id) %></li>
+        </strong>
+    </div>
   <% end %>
-</ul>
+</ol>
