--- a/app/views/passengers/edit.html.erb
+++ b/app/views/passengers/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: "form" ,locals: {button_name: "Edit Passenger"}%>
+<h2>Edit the passenger!!!</h2>
+
+<%= render partial: "form"%>
