--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,2 +1,41 @@
-<h1>Rides#new</h1>
-<p>Find me in app/views/rides/new.html.erb</p>
+<h2>New Trip</h2>
+
+<%= render partial: 'layouts/error_messages', locals: { model: @trip } %>
+
+<ul class= "form">
+  <%= form_for @trip do |f| %>
+    <li>
+      <%= f.label :date, :class => 'label' %>
+
+      <%= f.date_field :date, value: Date.today, :class => 'field' %>
+    </li>
+
+    <li class='hidden'>
+      <%= f.hidden_field :rating %>
+
+    </li>
+
+    <li class="hidden">
+      <% @trip.driver_id = Driver.all.shuffle.first.id %>
+      <%= f.hidden_field :driver_id %>
+    </li>
+    <li class="hidden" >
+      <% if @trip.passenger_id %>
+      <%= f.hidden_field :passenger_id %>
+      <% else %>
+      <%= f.label :passenger_id, :class => 'label' %>
+      <%= f.collection_select(:passenger_id, Passenger.all.order('name asc'), :id, :class => 'field')%>
+      <% end %>
+    </li>
+
+    <li>
+      <%= f.label :cost, :class => 'label' %>
+
+      <%= f.text_field :cost, :class => 'field' %>
+    </li>
+
+    <li>
+      <%= f.submit %>
+    </li>
+  <%end%>
+</ul>
