--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -1,8 +1,9 @@
 <h2>Driver Details</h2>
 
 <div>
-  <strong><%= @driver.name %></strong>
-  <p><%= @driver.vin %></p>
+  <strong><%= "Driver : #{@driver.name}" %></strong>
+
+  <p><%= "Vin: #{@driver.vin}" %></p>
 </div>
 
 <div>
@@ -15,7 +16,7 @@
 
 <div>
   <%= button_to "Edit", edit_driver_path(@driver.id), method: :get %>
-  <%= button_to "Delete", driver_path(@driver.id), method: :delete %>
+  <%= button_to "Delete", driver_path(@driver.id), method: :delete, data: {confirm: "Are you sure you want to delete this passenger?"} %>
 </div>
 
 <div>
