--- a/app/views/main_controller/index.html.erb
+++ b/app/views/main_controller/index.html.erb
@@ -1,4 +1,5 @@
 <h2>Welcome to the RideShare </h2>
 
 <%= link_to 'View all Drivers', drivers_path %>
-<%= link_to 'View all Passengers', passengers_path %
+<br>
+<%= link_to 'View all Passengers', passengers_path %>
