--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,11 +1,20 @@
 <h2>Drivers</h2>
 
-<ol>
-  <% @drivers.each do |driver| %>
-    <div class="driver">
-        <strong>
-          <li><%= link_to driver.name, driver_path(driver.id) %></li>
-        </strong>
-    </div>
-  <% end %>
-</ol>
+<table>
+  <tr>
+    <th>
+      Driver ID
+    </th>
+    <th>Driver</th>
+  </tr>
+<% @drivers.each do |driver| %>
+  <tr>
+    <td>
+      <%= driver.id %>
+    </td>
+    <td>
+    <%= link_to(driver.name, driver_path(driver.id)) %>
+    </td>
+  </tr>
+<% end %>
+</table>
