--- a/app/views/passengers/show.html.erb
+++ b/app/views/passengers/show.html.erb
@@ -10,9 +10,8 @@
 <%= button_to "Edit Passenger", edit_passenger_path(@passenger.id), method: :get %>
 <%= button_to "Delete Passenger", passenger_path(@passenger), method: :delete, data: {confirm: "Are you sure you want to delete this passenger?"} %>
 <%= button_to "Add New Trip", passenger_new_trip_path(@passenger.id), method: :post %>
-=======
-<h2>Phone_num:<%= @passenger.phone_num %></h2>
-<h2>Total_cost:<%= '%.02f' % (@passenger.total_cost / 100) %></h2>
+
+<h2>Total_cost: $<%= '%.02f' % (@passenger.total_cost / 100) %></h2>
 <%= "#{@passenger.name} has taken #{@passenger.trips.length} trip(s)" %>
 <h2>Passengers Trips</h2>
 <table>
@@ -29,7 +28,7 @@
 
     <% @passenger.trips.all.each do |trip| %>
     <tr>
-    <td><%=trip.id%></td>
+    <td><%=link_to trip.id, trip_path(trip.id)%></td>
     <td><%=trip.driver_id%></td>
     <td><%= trip.passenger_id %></td>
     <td><%= trip.date %></td>
@@ -48,4 +47,3 @@
     <td><%= link_to "Delete Trip", trip_path(trip.id),method: :delete %></td>
     </tr>
     <% end %>
-
