--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,8 +1,3 @@
 <h2>Let's edit that trip!!!</h2>
 
-<%= form_for @trip do |f| %>
-  <%= f.label :rating %>
-  <%= f.number_field :rating, in: 1.0..5.0 %>
-
-  <%= f.submit "Edit trip!" %>
-<% end %>
+<%= render partial: "form" %>
