--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -9,8 +9,13 @@
     <th>Trip Rating</th>
   </tr>
   <tr>
-    <td><%= @trip.passenger.name %></td>
-    <td><%= @trip.driver.name %></td>
+    <td><% if @trip.passenger_id != nil %>
+    <%= link to @trip.passenger.name, passenger_path(@trip.passenger)%>
+    <%end%>
+  </td>
+    <td> <% if @trip.driver_id != nil %>
+        <%= link_to @trip.driver.name, driver_path(@trip.driver) %>
+      <% end %></td>
     <td><%= "$#{@trip.cost/100.round(2)}" %></td>
     <td><%= "#{@trip.rating}" %></td>
   </tr>
@@ -18,7 +23,3 @@
 
     <%= link_to "Edit rating", edit_trip_path %>
     <%= button_to "Delete", trip_path(@trip.id), method: :delete %>
-
-
-
-   
